Add steps for reproducing the annotation processing problem